--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "g": "^2.0.1",
     "gatsby": "^2.24.26",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "surge": "^0.21.6"
   },
   "devDependencies": {
     "prettier": "2.0.5"
